--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/AssignmentRecordsScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/AssignmentRecordsScreen.fxml
@@ -28,7 +28,7 @@
                         <Font name="Calibri Bold" size="14.0" />
                      </font>
                   </Button>
-                  <Text fx:id="batchname" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Batch Name">
+                  <Text fx:id="batchName" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Batch Name">
                      <font>
                         <Font name="Calibri Bold Italic" size="18.0" />
                      </font>
@@ -68,13 +68,13 @@
               <content>
                 <AnchorPane minHeight="600.0" minWidth="700.0" style="-fx-background-color: purple;">
                      <children>
-                        <TableView prefHeight="607.0" prefWidth="1002.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="assignmentsTable" prefHeight="607.0" prefWidth="1002.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <columns>
-                            <TableColumn fx:id="name" minWidth="150.0" prefWidth="200.0" text="Name" />
-                            <TableColumn fx:id="feestatus" minWidth="150.0" prefWidth="200.0" text="Fee Status" />
-                              <TableColumn fx:id="courseware" minWidth="150.0" prefWidth="200.0" text="CourseWare" />
-                              <TableColumn fx:id="assignmentsissued" minWidth="150.0" prefWidth="200.0" text="Assignment Issued" />
-                              <TableColumn fx:id="assignmentssubmitted" minWidth="150.0" prefWidth="200.0" text="Assignment Submitted" />
+                            <TableColumn fx:id="assignmentsTableNameColumn" minWidth="150.0" prefWidth="200.0" text="Name" />
+                            <TableColumn fx:id="assignmentsTableFeeStatus" minWidth="150.0" prefWidth="200.0" text="Fee Status" />
+                              <TableColumn fx:id="assignmentsTableCourseware" minWidth="150.0" prefWidth="200.0" text="CourseWare" />
+                              <TableColumn fx:id="assignmentsTableAssignmentsIssued" minWidth="150.0" prefWidth="200.0" text="Assignment Issued" />
+                              <TableColumn fx:id="assignmentsTableAssignmentsSubmitted" minWidth="150.0" prefWidth="200.0" text="Assignment Submitted" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
