--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/ProgressTrackingScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/ProgressTrackingScreen.fxml
@@ -30,7 +30,10 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
                <children>
-                  <Button fx:id="back" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#GoToPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back" />
+                  <Button fx:id="back" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#GoToPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
+                     <font>
+                        <Font name="Calibri Bold" size="14.0" />
+                     </font></Button>
                   <Text fx:id="batchName" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Batch Name">
                      <HBox.margin>
                         <Insets top="20.0" />
@@ -129,8 +132,8 @@
                                  <children>
                                     <TableView fx:id="topicsTable" prefHeight="297.6" prefWidth="550.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                       <columns>
-                                        <TableColumn fx:id="topicsTableTopicName" prefWidth="200.0" text="Topic Name" />
-                                        <TableColumn fx:id="topicsTableTopicDuration" prefWidth="200.0" text="Duration" />
+                                        <TableColumn fx:id="topicsTableTopicNameColumn" prefWidth="200.0" text="Topic Name" />
+                                        <TableColumn fx:id="topicsTableTopicDurationColumn" prefWidth="200.0" text="Duration" />
                                       </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
