--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/WorkingProfessionalDetails.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/WorkingProfessionalDetails.fxml
@@ -135,7 +135,7 @@
             <Insets bottom="25.0" left="25.0" right="25.0" />
          </BorderPane.margin>
          <children>
-            <Button fx:id="cancel" mnemonicParsing="false" onAction="#cancelFrame" prefHeight="25.0" prefWidth="100.0" text="Cancel">
+            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelClick" prefHeight="25.0" prefWidth="100.0" text="Cancel">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
