--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchSelectionScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchSelectionScreen.fxml
@@ -106,15 +106,18 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="TOP" GridPane.vgrow="NEVER">
+                                    <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.halignment="CENTER" GridPane.valignment="TOP">
                                        <children>
-                                          <Button fx:id="batchName1" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getBatchDetails1" prefHeight="140.0" prefWidth="200.0" text="BATCH 1" textAlignment="CENTER">
+                                          <Button fx:id="batchID1" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 1" textAlignment="CENTER">
                                              <font>
                                                 <Font name="Calibri Bold Italic" size="34.0" />
                                              </font>
                                              <padding>
                                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                              </padding>
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
                                           </Button>
                                           <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="100.0" spacing="2.0">
                                              <children>
@@ -131,7 +134,7 @@
                                           </HBox>
                                        </children>
                                        <GridPane.margin>
-                                          <Insets />
+                                          <Insets left="5.0" />
                                        </GridPane.margin>
                                        <padding>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -139,13 +142,16 @@
                                     </VBox>
                                     <VBox layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="1">
                                        <children>
-                                          <Button fx:id="batchName2" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getBatchDetails2" prefHeight="140.0" prefWidth="200.0" text="BATCH 2">
+                                          <Button fx:id="batchID2" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 2">
                                              <font>
                                                 <Font name="Calibri Bold Italic" size="34.0" />
                                              </font>
                                              <padding>
                                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                              </padding>
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
                                           </Button>
                                           <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="100.0" spacing="2.0">
                                              <children>
@@ -164,16 +170,22 @@
                                        <padding>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </padding>
+                                       <GridPane.margin>
+                                          <Insets left="5.0" />
+                                       </GridPane.margin>
                                     </VBox>
                                     <VBox layoutX="260.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="2">
                                        <children>
-                                          <Button fx:id="batchName3" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getBatchDetails3" prefHeight="140.0" prefWidth="200.0" text="BATCH 3">
+                                          <Button fx:id="batchID3" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 3">
                                              <font>
                                                 <Font name="Calibri Bold Italic" size="34.0" />
                                              </font>
                                              <padding>
                                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                              </padding>
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
                                           </Button>
                                           <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="100.0" spacing="2.0">
                                              <children>
@@ -192,16 +204,22 @@
                                        <padding>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </padding>
+                                       <GridPane.margin>
+                                          <Insets left="5.0" />
+                                       </GridPane.margin>
                                     </VBox>
                                     <VBox layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="3">
                                        <children>
-                                          <Button fx:id="batchName4" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getBatchDetails4" prefHeight="140.0" prefWidth="200.0" text="BATCH 4">
+                                          <Button fx:id="batchID4" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 4">
                                              <font>
                                                 <Font name="Calibri Bold Italic" size="34.0" />
                                              </font>
                                              <padding>
                                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                              </padding>
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
                                           </Button>
                                           <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="100.0" spacing="2.0">
                                              <children>
@@ -220,16 +238,22 @@
                                        <padding>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </padding>
+                                       <GridPane.margin>
+                                          <Insets left="5.0" />
+                                       </GridPane.margin>
                                     </VBox>
                                     <VBox layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.rowIndex="1">
                                        <children>
-                                          <Button fx:id="batchName5" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getBatchDetails5" prefHeight="140.0" prefWidth="200.0" text="BATCH 5">
+                                          <Button fx:id="batchID5" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 5">
                                              <font>
                                                 <Font name="Calibri Bold Italic" size="34.0" />
                                              </font>
                                              <padding>
                                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                              </padding>
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
                                           </Button>
                                           <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="100.0" spacing="2.0">
                                              <children>
@@ -248,16 +272,22 @@
                                        <padding>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </padding>
+                                       <GridPane.margin>
+                                          <Insets left="5.0" />
+                                       </GridPane.margin>
                                     </VBox>
                                     <VBox layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                        <children>
-                                          <Button fx:id="batchName6" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getBatchDetails6" prefHeight="140.0" prefWidth="200.0" text="BATCH 6">
+                                          <Button fx:id="batchID6" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 6">
                                              <font>
                                                 <Font name="Calibri Bold Italic" size="34.0" />
                                              </font>
                                              <padding>
                                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                              </padding>
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
                                           </Button>
                                           <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="100.0" spacing="2.0">
                                              <children>
@@ -276,16 +306,22 @@
                                        <padding>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </padding>
+                                       <GridPane.margin>
+                                          <Insets left="5.0" />
+                                       </GridPane.margin>
                                     </VBox>
                                     <VBox layoutX="260.0" layoutY="270.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                        <children>
-                                          <Button fx:id="batchName7" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getBatchDetails7" prefHeight="140.0" prefWidth="200.0" text="BATCH 7">
+                                          <Button fx:id="batchID7" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 7">
                                              <font>
                                                 <Font name="Calibri Bold Italic" size="34.0" />
                                              </font>
                                              <padding>
                                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                              </padding>
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
                                           </Button>
                                           <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="100.0" spacing="2.0">
                                              <children>
@@ -304,16 +340,22 @@
                                        <padding>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </padding>
+                                       <GridPane.margin>
+                                          <Insets left="5.0" />
+                                       </GridPane.margin>
                                     </VBox>
                                     <VBox layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
                                        <children>
-                                          <Button fx:id="batchName8" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getBatchDetails8" prefHeight="140.0" prefWidth="200.0" text="BATCH 8">
+                                          <Button fx:id="batchID8" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 8">
                                              <font>
                                                 <Font name="Calibri Bold Italic" size="34.0" />
                                              </font>
                                              <padding>
                                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                              </padding>
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
                                           </Button>
                                           <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="100.0" spacing="2.0">
                                              <children>
@@ -332,6 +374,9 @@
                                        <padding>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </padding>
+                                       <GridPane.margin>
+                                          <Insets left="5.0" />
+                                       </GridPane.margin>
                                     </VBox>
                                  </children>
                                  <padding>
